<resources>
    <string name="app_name">Kalorientagebuch</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="str_menu_deleted">%s wurde gelöscht</string>
    <string name="str_ingredient_deleted">%s wurde aus dem Gericht entfernt</string>
    <string name="str_ingredient_added">%s wurde dem Gericht hinzugefügt</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Menu detail -->
    <string name="deleteMenu">Menü Löschen</string>

    //Preferences xml

    //Name
    <string name="text_persData">Persönliche Daten</string>
    <string name="button_name">Persönliche Daten ändern</string>
    <string name="str_save">Speichern</string>
    <string name="str_duplicate">Duplizieren</string>
    <string name="str_delete">Löschen</string>

    //Email
    <string name="button_email">Deine Email Adresse</string>

    //Tagesthöchstsatz in kcal
    <string name="button_hoechstsatz">Tagesthöchstsatz in kcal</string>

    //Standardeinheiten
    <string name="button_neueEinheit">Neue Einheit</string>
    <string name="text_standardeinheiten">Standardeinheiten</string>
    <string name="button_alleEinheiten">Alle Einheiten</string>

    //Average values
    <string name="str_today">Heute</string>
    <string name="str_avg_sevenDays">\u2205 7 Tage</string>
    <string name="str_avg_fourteenDays">\u2205 14 Tage</string>
    <string name="str_avg_thirtyDays">\u2205 30 Tage</string>

</resources>
