<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/text_persData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/text_persData"
        android:textColor="@color/colorPrimary"
        android:textSize="19dp"/>

    <Button
        android:id="@+id/button_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/button_name"
        android:textColor="@color/text_color"
        android:layout_below="@+id/text_persData"/>



    <TextView
        android:id="@+id/text_standardeinheiten"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_name"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:text="@string/text_standardeinheiten"
        android:textSize="19dp"
        android:textColor="@color/colorPrimary"/>


    <Button
        android:id="@+id/button_alleEinheiten"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text_standardeinheiten"
        android:text="@string/button_alleEinheiten"
        android:textColor="@color/text_color"/>


    </RelativeLayout>
